--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
   "devDependencies": {
     "@iconify/react": "^4.1.1",
     "autoprefixer": "^10",
+    "encoding": "^0.1.13",
     "postcss": "^8",
     "tailwindcss": "^3"
   }
